# OpenBench

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NML_SYNC_REPORT.md  README.md  README_API.md  REFACTORING_SUMMARY.md  __init__.py  demo_final_usage.py  pyproject.toml  requirement.txt  requirements.txt  requirements.yml  test_real.yaml  test_wei.yaml  test_wei2.yaml
.github/workflows/: ci.yml  publish.yml
GUI/: GUI_openbench.py  Page_control.py  Page_make_evaluation.py  Page_make_reference.py  Page_make_simulation.py  Page_make_validation.py  Page_run.py  Page_statistic.py  Page_visualization.py  run.sh
GUI/Comparison_figlib/: Fig_Basic_Plot.py  Fig_Correlation.py  Fig_Diff_Plot.py  Fig_Functional_Response.py  Fig_Mann_Kendall_Trend_Test.py  Fig_Relative_Score.py  Fig_heatmap.py  (+10 more)
conda/: meta.yaml
data/: landmask_0.5deg_notime.nc  landmask_1.0deg.nc
dataset/: landmask_0.5deg.nc  landmask_1.0deg_notime.nc
doc/: CHANGELOG_climatology_update.md  CLIMATOLOGY_EVALUATION.md  OFFLINE_INSTALLATION_GUIDE.md  climatology_evaluation_guide.md  climatology_quick_start.md  openbench-user-manual_cn.docx
examples/: simple_usage.py
nml/: .main-LS3MIP.nml.swp  figlib.json  figlib.nml  figlib.yaml  main-CaMa.nml  main-CoLM20X4vsCLM5.nml  main-Debug-bk.json  main-Debug-bk.nml  main-Debug-bk.yaml  main-Debug.json  main-Debug.nml  main-Debug.yaml  main-Debug_comment_EN.json  main-Debug_comment_ZH.json  main-GPP.nml  main-LS3MIP.nml  main-LSMs.nml  main-Streamflow.nml  main-f.yaml  main-mutil_ref.nml  main.json  main.nml  main_CoLM2024_pre_release.json  main_CoLM2024_pre_release.nml  main_CoLM2024_pre_release_station.nml  main_Crop.nml  main_Urban.nml  main_pearl.nml  ref-Debug.nml  ref-Debug.yaml  ref-Debug_comment_ZH.json  ref.nml  ref_stn.nml  sim-Debug_comment_EN.json  sim.nml  sim_CaMa-Streamflow.nml  sim_CoLM2024_GLDAS_CLM5.nml  sim_CoLM2024_TE_GLDAS_CLM5.nml  sim_CoLM2024_pre_release_station-igbp-cb.nml  sim_CoLM2024_pre_release_trajectory1.nml  (+11 more)
nml-win/: figlib.nml  main.nml  ref.nml  sim.nml
openbench/: Lib_Unit.py  Mod_APIService.py  Mod_CacheSystem.py  Mod_ClimateZone_Groupby.py  Mod_Comparison.py  Mod_Converttype.py  Mod_DataPipeline.py  Mod_DatasetProcessing.py  Mod_Evaluation.py  Mod_EvaluationEngine.py  Mod_Exceptions.py  Mod_Interfaces.py  Mod_Landcover_Groupby.py  Mod_LoggingSystem.py  Mod_Metrics.py  Mod_Namelist.py.backup  Mod_Only_Drawing.py  Mod_OutputManager.py  Mod_ParallelEngine.py  Mod_Preprocessing.py  Mod_ReportGenerator.py  Mod_Statistics.py  __init__.py  openbench.py  openbench_api.py
preprocessing/Water_Surface_Elevation/: pyproject.toml
preprocessing/Water_Surface_Elevation/_archive/: AllocateVS.py  convert_cama_base.py  convert_merit_flwdir.py  download_merit_flwdir.py  generate_flwdir.py  geoid_calculator.py
preprocessing/Water_Surface_Elevation/config/: cgls.yaml  global.yaml  hydrosat.yaml  hydroweb.yaml  icesat.yaml  icesat2.yaml  validation_rules.yaml
preprocessing/Water_Surface_Elevation/docs/: manual.md
preprocessing/Water_Surface_Elevation/docs/plans/: 2026-01-27-wse-pipeline-design.md  2026-01-28-code-review-fixes.md  2026-01-28-pipeline-implementation.md  2026-01-28-pipeline-refactor-design.md  2026-01-31-netcdf-output-design.md  2026-01-31-netcdf-output-implementation.md
preprocessing/Water_Surface_Elevation/src/: __init__.py  constants.py  exceptions.py  main.py  pipeline.py
preprocessing/Water_Surface_Elevation/src/core/: __init__.py  geoid_calculator.py  station.py
preprocessing/Water_Surface_Elevation/src/readers/: __init__.py  base_reader.py  cgls_reader.py  downloader.py  hydrosat_reader.py  hydroweb_reader.py  icesat_reader.py
preprocessing/Water_Surface_Elevation/src/steps/: __init__.py  step0_download.py  step1_validate.py  step2_cama.py  step3_reserved.py  step4_merge.py
preprocessing/Water_Surface_Elevation/src/utils/: __init__.py  checkpoint.py  config_loader.py
preprocessing/Water_Surface_Elevation/src/writers/: __init__.py  netcdf_writer.py
preprocessing/Water_Surface_Elevation/tests/: __init__.py  conftest.py  test_checkpoint.py  test_cli.py  test_config_env.py  test_geoid_calculator.py  test_hydrosat_reader.py  test_icesat_reader.py  test_integration.py  test_netcdf_integration.py  test_netcdf_writer.py  test_pipeline.py  test_readers.py  test_readers_init.py  test_ssl_config.py  test_station.py  test_station_allocation.py  test_step0_additional.py  test_step0_download.py  test_step1_validate.py  test_step1_validate_class.py  test_steps.py  test_unified_station.py  test_utils.py  test_with_real_data.py
preprocessing/Water_Surface_Elevation/tests/_legacy/: __init__.py  test_allocate_vs.py
script/: Lib_FileProcessing.py  Lib_Time.py  Lib_Unit.py  Mod_Accuracy.py  Mod_Comparison.py  Mod_DatasetProcessing.py  Mod_Evaluation.py  Mod_Landcover_Groupby.py  Mod_Metrics.py  Mod_Namelist.py  Mod_Only_Drawing.py  Mod_Preprocessing.py  Mod_Scores.py  Mod_Statistics.py  Mod_Validation.py  openbench.py
scripts/: benchmark_openbench.py
tests/: __init__.py  conftest.py  gui_fakes.py  test_architecture_cleanup.py  test_architecture_cli.py  test_architecture_core.py  test_architecture_data.py  test_architecture_runner.py  test_audit_bugfixes.py  test_benchmark_script.py  test_build_artifacts.py  test_cable_support.py  test_cache_regressions.py  test_case_insensitive_names.py  test_cli_check_preflight.py  test_cli_integration.py  test_cli_model_management.py  test_cli_sim_scan.py  test_cli_stubs.py  test_climatology_weighting.py  test_compute.py  test_converttype_precision.py  test_custom_filters.py  test_data_pipeline_validation.py  test_dead_code_cleanup.py  test_e3sm_land_support.py  test_ecland_support.py  test_flat_var_resolution.py  test_groupby_regressions.py  test_gui_async_lifecycle.py  test_gui_config_manager.py  test_gui_controller_paths.py  test_gui_data_discovery.py  test_gui_evaluation_runner.py  test_gui_legacy_cleanup.py  test_gui_page_preview_remote.py  test_gui_page_run_monitor_remote.py  test_gui_remote_scanner_workflow.py  test_gui_save_preserves_fields.py  test_gui_scan_alignment_fixes.py  (+46 more)
(+3082 files in other folders)
