[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openbench"]

[project]
name = "openbench"
version = "3.0.0a1"
description = "Open Source Land Surface Model Benchmarking System"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Zhongwang Wei" },
    { name = "CoLM-SYSU" },
]
keywords = ["land surface model", "benchmarking", "evaluation", "climate", "earth science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "xarray>=0.19.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "netCDF4>=1.5.7",
    "matplotlib>=3.4.0",
    "cartopy>=0.20.0",
    "dask>=2022.1.0",
    "joblib>=1.1.0",
    "flox>=0.5.0",
    "PyYAML>=6.0",
    "jinja2>=3.0.0",
    "click>=8.0",
    "platformdirs>=3.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5.0"]
remote = ["paramiko>=3.0.0", "cryptography>=41.0.0"]
report = ["xhtml2pdf>=0.2.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]
all = ["openbench[gui,remote,report]"]

[project.scripts]
openbench = "openbench.cli.main:cli"

[project.urls]
Homepage = "https://github.com/CoLM-SYSU/OpenBench"
Documentation = "https://openbench.readthedocs.io"
Repository = "https://github.com/CoLM-SYSU/OpenBench"
Issues = "https://github.com/CoLM-SYSU/OpenBench/issues"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Migrated legacy code — relax lint rules to avoid massive churn
"src/openbench/util/*.py" = ["E", "F", "W", "I"]
"src/openbench/data/*.py" = ["E", "F", "W", "I"]
"src/openbench/data/**/*.py" = ["E", "F", "W", "I"]
"src/openbench/core/*.py" = ["E", "F", "W", "I"]
"src/openbench/core/**/*.py" = ["E", "F", "W", "I"]
"src/openbench/visualization/*.py" = ["E", "F", "W", "I"]
"src/openbench/config/legacy_*.py" = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
