[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/openbench/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/openbench"]
# Defense in depth: even if a developer accidentally creates one of
# these runtime/test directories under the package root (it's
# happened — a previous build shipped a 13 GB sdist this way), keep
# them out of the wheel.
exclude = [
    "src/openbench/data/custom/output",
    "src/openbench/data/custom/output/**",
    "src/openbench/data/custom/cache",
    "src/openbench/data/custom/cache/**",
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
    # Build-time scratch files from the registry's atomic-write +
    # file-lock paths (see config.user_settings._save and
    # data.registry.manager._safe_load_catalog). These should never be
    # shipped to end users — they're transient backups of the user's
    # local catalog edits and OS-level lock files.
    "**/*.bak",
    "**/*.lock",
    "**/*.tmp",
]


[tool.hatch.build.targets.sdist]
# By default sdist would pick up everything in the working tree —
# including any output/cache directories created by ad-hoc test runs
# (the previous sdist artifact was 13 GB for exactly this reason).
include = [
    "src/openbench",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "CHANGELOG.md",
]
exclude = [
    "src/openbench/data/custom/output",
    "src/openbench/data/custom/output/**",
    "src/openbench/data/custom/cache",
    "src/openbench/data/custom/cache/**",
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
    # NOTE: we intentionally do NOT blanket-exclude **/*.nc here. The only
    # NetCDF files tracked in VCS are the bundled classification masks under
    # src/openbench/dataset/ (IGBP/PFT/Köppen, ~1.1 MB compressed), which must
    # ship in the sdist so a source build produces a working wheel. All other
    # .nc (runtime outputs, datasets) stay untracked and are excluded by VCS
    # selection; local artifact tests and GitHub workflow archive checks guard
    # that only the dataset masks ship.
    # See wheel exclude above — same rationale.
    "**/*.bak",
    "**/*.lock",
    "**/*.tmp",
]

[project]
name = "colm-openbench"
# Single source of truth: src/openbench/__init__.py __version__ (see [tool.hatch.version]).
dynamic = ["version"]
description = "Open Source Land Surface Model Benchmarking System"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Zhongwang Wei" },
    { name = "CoLM-SYSU" },
]
keywords = ["land surface model", "benchmarking", "evaluation", "climate", "earth science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "xarray>=0.19.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "netCDF4>=1.5.7",
    "matplotlib>=3.4.0",
    "cartopy>=0.20.0",
    "dask>=2022.1.0",
    "joblib>=1.1.0",
    "flox>=0.5.0",
    "PyYAML>=6.0",
    "jinja2>=3.0.0",
    "click>=8.0",
    "tqdm>=4.0",
    "packaging>=21.0",
    # Analysis / plotting / migration features ship in the default install so
    # `pip install colm-openbench` is fully featured. GUI, remote, and PDF
    # reports (report/xhtml2pdf — it builds pycairo, which needs system cairo)
    # stay optional (see optional-dependencies).
    "scikit-learn>=1.0",
    "statsmodels>=0.13",
    "seaborn>=0.12",
    "f90nml>=1.4.4",
]

[project.optional-dependencies]
# Only the GUI (PySide6/Qt) and remote-SSH stacks are optional; everything else
# is in the base install. The report/migration/statistics/plot extras are kept
# (empty) for backward compatibility so e.g. `pip install colm-openbench[report]`
# still resolves and never errors.
gui = ["PySide6>=6.5.0"]
remote = ["paramiko>=3.0.0", "cryptography>=41.0.0"]
# PDF reports need xhtml2pdf, which pulls pycairo (requires system cairo to
# build), so it stays optional to keep the base `pip install` lightweight and
# portable. Without it, evaluation still produces HTML reports.
report = ["xhtml2pdf>=0.2.5"]
# migration/statistics/plot are now in the base install; these extras are kept
# (empty) for backward compatibility so e.g. `pip install colm-openbench[plot]`
# still resolves and never errors.
migration = []
statistics = []
plot = []
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "tomli>=2.0; python_version < '3.11'",
]
all = ["colm-openbench[gui,remote,report]"]

[project.scripts]
openbench = "openbench.cli.main:cli"

[project.urls]
Homepage = "https://github.com/CoLM-SYSU/OpenBench"
Documentation = "https://openbench.readthedocs.io"
Repository = "https://github.com/CoLM-SYSU/OpenBench"
Issues = "https://github.com/CoLM-SYSU/OpenBench/issues"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Migrated legacy code — relax lint rules to avoid massive churn
"src/openbench/util/*.py" = ["E", "W", "I"]
"src/openbench/data/*.py" = ["E", "W", "I"]
"src/openbench/data/**/*.py" = ["E", "W", "I"]
"src/openbench/core/*.py" = ["E", "W", "I"]
"src/openbench/core/**/*.py" = ["E", "W", "I"]
"src/openbench/visualization/*.py" = ["E", "W", "I"]
"src/openbench/config/legacy_*.py" = ["E", "W", "I"]
"src/openbench/remote/*.py" = ["E", "W", "I"]
"src/openbench/gui/*.py" = ["E", "W", "I"]
"src/openbench/gui/**/*.py" = ["E", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "." 让 docs.manual.scripts.* 可被 import（手册生成器与其测试用）
pythonpath = ["src", "."]

[tool.coverage.run]
branch = true
source = ["openbench"]
omit = [
    # Auto-generated colormap dispatch (~6000 lines, mostly identical
    # property bodies — would dominate coverage stats without telling
    # us anything about real code quality).
    "src/openbench/visualization/cmaps/cmaps.py",
    # Optional GUI runs in its own process; skip from headless test cov.
    "src/openbench/gui/*",
    "src/openbench/gui/**/*",
]

[tool.coverage.report]
# Print line numbers of missing coverage in the terminal report.
show_missing = true
# Treat partially-covered branches as misses too.
skip_covered = false
exclude_lines = [
    # Standard pragma
    "pragma: no cover",
    # Ignore re-raises and bare protective branches
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
