[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wse-pipeline"
version = "0.1.0"
description = "Water Surface Elevation Pipeline for OpenBench"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "numpy>=1.20",
    "h5py>=3.0",
    "requests>=2.25",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
wse = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
