[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wse-pipeline"
version = "0.1.0"
description = "Water Surface Elevation Pipeline for OpenBench"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "numpy>=1.20",
    "h5py>=3.0",
    "requests>=2.25",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
wse = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--ignore=tests/_legacy"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/core/allocate_vs.py",  # Legacy Fortran conversion - not part of new pipeline
    "src/readers/downloader.py",  # Network-dependent download code
    "src/readers/icesat_reader.py",  # HDF5 parsing requires h5py and real HDF5 files
    "src/core/geoid_calculator.py",  # Requires external GeoidEval tool
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 70
